2013-12-31  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* benchtests/cos-inputs: New inputs.
	* benchtests/sin-inputs: Likewise.

	* benchtests/atan-inputs: New inputs. Fix name of multiple
	precision fallback inputs.

	* benchtests/atanh-inputs: New inputs.
	* benchtests/tanh-inputs: Likewise.

	* benchtests/acosh-inputs: New inputs.
	* benchtests/asinh-inputs: Likewise.

	* benchtests/cosh-inputs: New inputs.
	* benchtests/sinh-inputs: Likewise.

	* benchtests/acos-inputs: Add more inputs.
	* benchtests/asin-inputs: Likewise.

2013-12-30  Ville Skytta  <ville.skytta@iki.fi>

	[BZ #16375]
	* manual/arith.texi: Fix spelling.
	* manual/charset.texi: Likewise.
	* manual/errno.texi: Likewise.
	* manual/filesys.texi: Likewise.
	* manual/lang.texi: Likewise.
	* manual/llio.texi: Likewise.
	* manual/locale.texi: Likewise.
	* manual/message.texi: Likewise.
	* manual/resource.texi: Likewise.
	* manual/search.texi: Likewise.
	* manual/setjmp.texi: Likewise.
	* manual/stdio.texi: Likewise.
	* manual/string.texi: Likewise.
	* manual/sysinfo.texi: Likewise.
	* manual/time.texi: Likewise.

2013-12-27  Carlos O'Donell  <carlos@redhat.com>

	* po/sl.po: New file.

2013-12-27  Mike Frysinger  <vapier@gentoo.org>

	* .gitignore: Add core/.gdbinit/.gdb_history.

2013-12-27  Allan McRae  <allan@archlinux.org>

	[BZ #16369]
	* sysdeps/ieee754/dbl-64/s_sin.c (csloww): Fix variable name.
	Reported by Il'ya Malakhov <ilmalakhov@yandex.ru>

2013-12-24  Brooks Moses  <bmoses@google.com>

	* string/string.h (__CORRECT_ISO_CPP_STRING_H_PROTO): Define for
	all compilers that claim C++98 compliance, not just GCC.
	* string/strings.h (__CORRECT_ISO_CPP_STRINGS_H_PROTO):
	Likewise.

2013-12-24  Maxim Kuvyrkov  <maxim@kugelworks.com>

	* NEWS: Restore accidentally deleted bug-fix entries.

2013-12-24  Maxim Kuvyrkov  <maxim@kugelworks.com>
	    Ondřej Bílka  <neleai@seznam.cz>

	[BZ #15073]
	* malloc/malloc.c (_int_free): Perform sanity check only if we
	have_lock.
